Fixed top spacing and separate border.

--- a/files4jd/stylesheet.css
+++ b/files4jd/stylesheet.css
@@ -916,3 +916,8 @@ div.contentContainer ul.blockList li.blockList h2{
   text-decoration: line-through;
   cursor: default;
 }
+
+.mainContainerWrapper { margin-top: 80px; float: left; width: 100%; }
+
+
+
